--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script type="text/javascript" src='main.js'></script>
-
+  <div id="change"> <button type="button" onclick="update(data[1])">Click Me!</button> </div>
 </body>
 </html>
